<?xml version="1.0"?>
<package format="2">
  <name>avoidance</name>
  <version>0.0.0</version>
  <description>Multi-vehicle avoidance by subscribing their gps coordiantes</description>

  <maintainer email="gajendranagar02@gmail.com">Gajendra Nagar</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>mav_utils_msgs</depend>

</package>