<?xml version="1.0"?>
<package format="2">
  <name>avoidance_msgs</name>
  <version>0.0.0</version>
  <description>The avoidance_msgs package</description>
  
  <maintainer email="gajen@todo.todo">gajen</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>